--- a/index.html
+++ b/index.html
@@ -13,27 +13,59 @@
 </head>
 <body>
     <div>
-        <table class="table table-bordered table-hover text-center">
-                <thead>
-                    <th><h1>B</h1></th>
-                    <th><h1>I</h1></th>
-                    <th><h1>N</h1></th>
-                    <th><h1>G</h1></th>
-                    <th><h1>O</h1></th>
-                </thead>
+        <table id="bingo" class="table table-bordered table-hover text-center">
+            <thead>
+                <th><h1>B</h1></th>
+                <th><h1>I</h1></th>
+                <th><h1>N</h1></th>
+                <th><h1>G</h1></th>
+                <th><h1>O</h1></th>
+            </thead>
 
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>16</td>
-                        <td>31</td>
-                        <td>46</td>
-                        <td>61</td>
-                    </tr>
-                </tbody>
-                <tfoot></tfoot>
+            <tbody>
+                <tr>
+                    <td id="b1"></td>
+                    <td id="i1"></td>
+                    <td id="n1"></td>
+                    <td id="g1"></td>
+                    <td id="o1"></td>
+                </tr>
+
+                <tr>
+                    <td id="b2"></td>
+                    <td id="i2"></td>
+                    <td id="n2"></td>
+                    <td id="g2"></td>
+                    <td id="o2"></td>
+                </tr>
+
+                <tr>
+                    <td id="b3"></td>
+                    <td id="i3"></td>
+                    <td id="n3"></td>
+                    <td id="g3"></td>
+                    <td id="o3"></td>
+                </tr>
+
+                <tr>
+                    <td id="b4"></td>
+                    <td id="i4"></td>
+                    <td id="n4"></td>
+                    <td id="g4"></td>
+                    <td id="o4"></td>
+                </tr>
+
+                <tr>
+                    <td id="b5"></td>
+                    <td id="i5"></td>
+                    <td id="n5"></td>
+                    <td id="g5"></td>
+                    <td id="o5"></td>
+                </tr>
+            </tbody>
+            <tfoot></tfoot>
         </table>
     </div>
+    <script src="./index.js"></script>
 </body>
-<script src="./index.js"></script>
 </html>
